# Ipshin

./: .gitignore  ASNFinder.py  IPFinder.py  README.md  SRDirect.conf  TestV2rayRule.json  pyproject.toml
docs/: Index.html  index.html  script.js  style.css
src/: asnfinder.py  ipfinder.py
